Base wrapper and header responsive update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="wrapper">
   <div class="logos">
     <a href="https://jekyllrb.com/"><img src="{{ '/assets/logos/jekyll-logo-black-red-transparent.png' | relative_url }}"/></a>
     <a href="https://pages.github.com/"><img src="{{ '/assets/logos/GitHub_Logo.png' | relative_url }}"/></a>
