--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<div class="home-story">
-    <div class="home-wrap">
+<div class="home-story wrapper">
         <div class="intro-box">
             <div class="home-ribbon">
                 <div class="home-title">
@@ -20,5 +19,4 @@ layout: default
 
       {% include portfolio.html %}
 
-        </div>
 </div>
