--- a/_sass/kmr/_header.scss
+++ b/_sass/kmr/_header.scss
@@ -10,32 +10,29 @@
 #nav-header {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
     padding: {
       top: 15px;
       bottom: 15px;
     }
-    @media (max-width: 820px) {
-      flex-direction: column;
-      padding: {
-        top: 5px;
-        bottom: 5px;
-      }
-    }
+    @media ($desktop) {align-items: baseline;}
+    @media ($tablet) {align-items: center;}
 }
 
 .site-title {
   font-family: $Abel;
   div {
-    display: inline-block;
     color: $black;
     padding-left: 5px;
     font-style: italic;
-    font-size: 20px;
+    @media ($desktop) {font-size: 20px; display: inline-block;}
+    @media ($tablet) {display: none;}
+    @media ($phone) {display: none;}
     }
   a {
       color: $black;
-      font-size: 25px;
+      @media ($desktop) {font-size: 25px;}
+      @media ($tablet) {font-size: 20px;}
+      @media ($phone) {font-size: 20px;}
       font-weight: bold;
     &:visited {
         color: $black;
@@ -49,23 +46,19 @@
 .nav-links {
   display: flex;
   justify-content: space-between;
-  @media ($desktop) {align-self: flex-end; padding-left: 15px;}
-  @media (max-width: 820px) {align-self: flex-start; padding-top: 5px;}
-  a {
+  padding-left: 5px;
   color: $black;
-  padding-left: 10px;
-  padding-right: 10px;
   font-family: $Abel;
-  font-size: 20px;
-  &:first-of-type {
-    @media (max-width: 820px) {
-    padding-left: 0px;
-    }
+  @media ($desktop) {font-size: 20px;}
+  @media ($tablet) {font-size: 18px; line-height: 20px;}
+  @media ($phone) {font-size: 18px; line-height: 20px;}
+ a {
+   padding-left: 10px;
+   padding-right: 10px;
   }
-}
-  div {
+/*  div {
     color: $black;
     font-family: $Abel;
     font-size: 20px;
-  }
+  }*/
 }
