Page Layout - Responsive Update

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,7 @@ layout: default
 <div class="page-flex">
 
   <div class="page-header-pic" style="background-image: url('{{ site.url }}/assets/images/{{ page.header-pic }}')"></div>
+  <div class="page-header-pic-alt" style="background-image: url('{{ site.url }}/assets/images/{{ page.header-pic-alt }}')"></div>
 
   <div class="page-right">
     <div class="page-header-one">{{ page.title | escape }}</div>
