--- a/_sass/kmr/_base.scss
+++ b/_sass/kmr/_base.scss
@@ -34,7 +34,8 @@ main {
 }
 
 .wrapper {
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   @media ($desktop) {width: 80%;}
   @media ($tablet) {width: 90%;}
   @media ($phone) {width: 95%;}
