--- a/_sass/kmr/_layout.scss
+++ b/_sass/kmr/_layout.scss
@@ -3,7 +3,8 @@
  */
 
 .page {
-   margin-top: 20px;
+  @media (min-width: 1051px) {margin-top: 20px;}
+  @media (max-width: 1050px) {margin-top: 0px;}
  }
 
 .page-heading {
@@ -28,32 +29,73 @@
 */
 .page-flex {
   display: flex;
+  @media (min-width: 1056px) {flex-direction: row;}
+  @media (max-width: 1055px) {flex-direction: column; align-items: center;}
   justify-content: center;
   min-height: 400px;
 }
 
 .page-right {
-  width: 900px;
+  @media (min-width: 1301px) {width: 800px;}
+  @media (max-width: 1300px) {width: 700px;}
+  @media (max-width: 750px) {width: 90%;}
+  @media ($phone) {width: 95%;}
 }
 
 .page-header-pic {
+  @media (min-width: 1301px) {
   max-width: 200px;
   max-height: 400px;
-  background-size: 400px;
-  background-position: center;
+  background-size: 100%;
   border-top-left-radius: 200px;
   border-bottom-left-radius: 200px;
   flex: 1 0 auto;
   margin-right: 5px;
+  }
+  @media (max-width: 1300px) {
+    max-width: 150px;
+    max-height: 300px;
+    background-size: 100%;
+    border-top-left-radius: 150px;
+    border-bottom-left-radius: 150px;
+    flex: 1 0 auto;
+    margin-right: 5px;
+  }
+  @media (max-width: 1056px) {display: none;}
+}
+
+.page-header-pic-alt {
+  @media (min-width: 1056px) {display: none;}
+  @media (max-width: 1055px) {
+    min-height: 50px;
+    max-width: 690px;
+    min-width: 690px;
+    border-radius: 0px;
+    margin-bottom: 10px;
+    margin-right: 0px;
+    margin-left: 10px;
+    background-position: center;}
+  @media (max-width: 750px) {
+    width: 90%;
+    margin-left: 0px;
+    max-width: 690px;
+    min-width: 200px;
+  }
+  @media ($phone) {
+    width: 95%;
+    margin-left: 0px;
+  }
 }
 
 .page-header-one {
   font-size: 30px;
-  margin-left: 10px;
   font-family: $Abel;
   text-transform: lowercase;
-  border-top: black solid 2px;
   font-weight: bold;
+  @media ($desktop) {border-top: black solid 2px; margin-left: 10px;}
+  @media ($tablet) {border-top: black solid 2px; margin-left: 10px;}
+  @media (max-width: 750px) {margin-left: 0px;}
+  @media ($phone) {border-top: none;}
 }
 
 .page-small-header {
@@ -65,7 +107,9 @@
 }
 
 .page-content {
-  margin-left: 10px;
+  @media ($desktop) {margin-left: 10px;}
+  @media ($tablet) {margin-left: 10px;}
+  @media (max-width: 750px) {margin-left: 0px;}
   ul, li {
     margin-left: 0px;
   }
@@ -76,8 +120,14 @@
   margin-top: 20px;
 }
 
+#about-credit {
+  font-size: 12px;
+}
+
 .page-padding {
-min-width: 205px;
+  @media (min-width: 1301px) {min-width: 205px;}
+  @media (max-width: 1300px) {min-width: 155px;}
+  @media (max-width: 1055px) {display: none;}
 }
 
 /**
