MLIS Portfolio and Practicum - Responsive Update

--- a/_sass/kmr.scss
+++ b/_sass/kmr.scss
@@ -47,5 +47,6 @@ $phone: "max-width: 520px"; // @ screen size below 520px
   "kmr/spadefoot",
   "kmr/metadata",
   "kmr/practicum",
+  "kmr/mlis",
   "kmr/blog"
 ;
