Spadefoot Project - Responsive Update

--- a/_layouts/spadefoot.html
+++ b/_layouts/spadefoot.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="spadefoot-page">
 
-<p class="spadefoot-credit">Project for <a href="{{ 'mlis/portfolio/home' | relative_url }}">Kent State MLIS Program</a> - Cultural Heritage Informatics Fall 2019</p>
+<p class="spadefoot-credit">Project for <a href="{{ 'mlis' | relative_url }}">Kent State MLIS Program</a> - Cultural Heritage Informatics Fall 2019</p>
 
 <div class="spadefoot-header">
   <div class="spadefoot-title"><a href="{{ "/mlis/spadefoot/home" | relative_url }}">Scaphiopus <em>solitarius</em></a></div>
