--- a/_sass/kmr/_mlis.scss
+++ b/_sass/kmr/_mlis.scss
@@ -2,15 +2,12 @@
 * MLIS
 */
 
-//.mlis {margin-top: 10px;}
-
 .mlis-page-header {
   font-family: $Abel;
   text-transform: lowercase;
   font-weight: bold;
   @media (min-width: 726px) {font-size: 30px;}
   @media (max-width: 725px) {font-size: 25px;}
-
   }
 
 .mlis-nav-header {
@@ -33,9 +30,7 @@
     width: 300px;
     font-size: 18px;
   }
-  @media ($phone) {
-    margin-left: -1px;
-  }
+  @media ($phone) {margin-left: -1px;}
 }
 
 .mlis-flex {
@@ -66,9 +61,7 @@ img.mlis-home-img {
     @media (max-width: 750px) {font-size: 20px;}
     a {
       text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
+      &:hover {text-decoration: underline;}
     }
   }
   .mlis-project-wrap {
@@ -96,28 +89,34 @@ img.mlis-home-img {
   }
 }
 
-.mlis {
+/**
+* MAIN TAB STYLES
+**/
+
+.mlis .ui-tabs .ui-tabs-panel {flex-direction: column;}
+
+.mlis, .spadefoot-content {
   .ui-tabs {
     .ui-tabs-panel {
-    border-radius: 5px;
-    border: black 2px solid;
-    display: flex;
-    flex-direction: column;
+      border-radius: 5px;
+      border: black 2px solid;
+      display: flex;
     }
     .ui-tabs-nav {
-      margin-left: 15px;
+      margin-left: 10px;
       li.ui-tabs-active {
         margin-bottom: -2px;
         padding-bottom: 2px;
         }
       }
-      li.ui-tabs-tab {
-        font-size: 14px;
+    li.ui-tabs-tab {font-size: 13px;}
+    a.ui-tabs-anchor {
+      @media (min-width: 1141px) {padding: .5em 1em;}
+      @media (max-width: 1140px) {
+        padding: .5em .25em;
+        white-space: normal;
+        text-align: center;
       }
-      a.ui-tabs-anchor {
-        @media ($phone) {
-          padding: .5em .5em;
-        }
     }
     .ui-state-default {
       border: #c5c5c5 2px solid;
@@ -127,16 +126,50 @@ img.mlis-home-img {
       border: 2px solid black;
       background: white;
       border-bottom-width: 0;
-      a:link {
-        color: black;
-      }
+      a:link {color: black;}
     }
   }
-  .ui-widget.ui-widget-content {
-  border: none;
-  }
+  .ui-widget.ui-widget-content {border: none;}
   .ui-widget-header {
     background: none;
     border: none;
+  }
+}
+
+
+/**
+* SUBMENU STYLES
+*/
+
+.mlis-submenu {
+  background: #ededed;
+  display: flex;
+  margin-bottom: 20px;
+  @media (min-width: 621px) {
+    padding-left: 10px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  @media (max-width: 620px) {
+    padding-left: 10px;
+    flex-direction: column;
+    padding-bottom: 5px;
+  }
+  .submenu-title {
+    font-family: "Abel", sans-serif;
+    font-weight: bold;
+    @media (min-width: 901px) {font-size: 32px;}
+    @media (max-width: 900px) {
+      font-size: 25px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  }
+  .submenu-link {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 10px;
   }
 }
