Add Seperate Portfolio Page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <div> / </div>
       <a href="{{ "/resume/" | relative_url }}">resume</a>
       <div> / </div>
-      <a href="{{ "/" | relative_url }}">portfolio</a>
+      <a href="{{ "/portfolio/" | relative_url }}">portfolio</a>
       <div> / </div>
       <a href="{{ "/contact/" | relative_url }}">contact</a>
     </div>
